--- a/public/stat120/Day6.html
+++ b/public/stat120/Day6.html
@@ -15,8 +15,8 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- February 13 2023
+ April 07 2023
 
 ---
 
@@ -66,7 +66,9 @@ background-size: 160px, 100% 100%
 
 --
 
-.bql[
+&lt;br&gt;
+
+.bq.font80[
 A .bold[scatterplot] is the plot of `\((x_i, y_i)\)`.
 - form? linear or non-linear
 - direction? positive, negative, no association
@@ -97,6 +99,8 @@ A .bold[scatterplot] is the plot of `\((x_i, y_i)\)`.
  
 --
 
+&lt;br&gt;
+
 .bql[    
 .bold[negative association:] as `\(x\)` increases, `\(y\)` decreases
 - number of cigarettes smoked per day and lung capacity
@@ -104,6 +108,8 @@ A .bold[scatterplot] is the plot of `\((x_i, y_i)\)`.
 ]
 
 ---
+
+class: middle
 
 # Correlation Coefficients
 
@@ -122,7 +128,6 @@ A .bold[scatterplot] is the plot of `\((x_i, y_i)\)`.
 ]
 
 
---
 
 .pull-right-40[
 &lt;br&gt;
@@ -152,7 +157,7 @@ cor(data$x, data$y)
 
 # Linear Regression
 
-.center.green-h[.bold[Goal:] To find a straight line that best fits the data in a scatterplot]
+.center.blue-h[.b[Goal:] To find a straight line that best fits the data in a scatterplot]
 .bql.font80[
 The estimated regression line is `\(\hat{y} = a + bx\)`
 - x is the explanatory variable
@@ -189,22 +194,6 @@ class: middle
 &lt;/center&gt;
 ]
 
-
----
-
-class: middle
-
-# Least Squares Line
-
-.bq[
-The Least squares line is the line which minimizes the sum of squared residuals. Want to minimize:
-
-$$\sum_{i=1}^n (y_i - \hat{y}_i)^2 = (y_1 - \hat{y}_1)^2 + (y_2 - \hat{y}_2)^2 + \cdots + (y_n - \hat{y}_n)^2 $$
-]
-
-.center[“least squares line” = “regression line”]
-
-
 ---
 
 class: middle
@@ -223,7 +212,7 @@ class: middle
 
 class: middle
 
-# Outliers Detection
+# Presence of Outliers 
 
 
 .pull-left-40[
@@ -241,9 +230,7 @@ class: middle
 .pull-right-60[
 
 &lt;img src="Day6_files/figure-html/unnamed-chunk-2-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
-
 ]
-
 
 ---
 
@@ -260,15 +247,15 @@ class: action
 &lt;br&gt;
 .bq[
 
-Go to our class [moodle](https://moodle.carleton.edu) and skim through class activity 1
+Go to our class [moodle](https://moodle.carleton.edu) and skim through the class activity 
 
 Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_3d331d4f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_08256122" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
@@ -279,7 +266,7 @@ Feel free to talk to your neighbor
 
 .pull-left-60[
 
-Regression of BAC on number of beers
+.hljs[Regression of BAC on number of beers]
 
 .code70[
 
@@ -311,7 +298,7 @@ F-statistic: 55.94 on 1 and 14 DF,  p-value: 2.969e-06
 .pull-right-40[
 &lt;br&gt;
 &lt;br&gt;
-.bqt.font80[
+.bq.font80[
 Slope, `\(b= 0.0180\)`: 
 
 - `Estimate` column and `Beers` row
@@ -325,7 +312,6 @@ Intercept, `\(a = -0.0127\)`:
 
 ---
 
-class: middle
 
 # Regressing BAC on number of beers
 
@@ -371,7 +357,6 @@ abline(bac.lm) # adds regression line
 
 ---
 
-class: middle
 
 # Regressing BAC on number of beers
 
@@ -409,15 +394,14 @@ class: middle
 ---
 
 # R-squared
-.bqt.font80[
+.bql[
 .bold[R-squared] is proportion (or percentage) of variability observed in the response y which can be explained by the explanatory variable x.
-
-$$R^2 = 1 - \text{unexplained variation} = 1 - \frac{s^{2}_{\text{residuals}}}{s^2_y} $$
 ]
 
-- `\(R^2 = r^2\)` in simple linear regression model (One explanatory variable)
+.hljs[
+`\(R^2 = r^2\)` in simple linear regression model (One explanatory variable)]
 
-.bql.font80[
+.bq.font90[
 .bold[BAC] : `\(R^2 = 0.7998\)`
 
 - The number of beers consumed explains about 80.0% of the observed variation in BAC
@@ -473,7 +457,7 @@ ggplot(data, aes(x=x,y=y,color=z)) + geom_point()
 
 --
 
-.bqt.font80[
+.bqt.font90[
 - split (subset) data by categories, run regressions for each group.
 - look for outliers that affect the fitted model and correlation
 - fit the model/correlation with and without case(s) to see the affects
@@ -501,7 +485,7 @@ ggplot(salarydata, aes(x=Age,
   geom_point()
 ```
 ]
-.bq[
+.bq.font90[
 - Visually split the data by PhD status
 - Potentially different trends
 ]
@@ -515,7 +499,7 @@ class: middle
 
 .pull-left-60[
 
-&lt;img src="Day6_files/figure-html/unnamed-chunk-14-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day6_files/figure-html/unnamed-chunk-14-1.svg" width="85%" style="display: block; margin: auto;" /&gt;
 
 ]
 
@@ -532,7 +516,7 @@ Visually infer difference in groups:
 
 # Adding a categorical variable: stats by group
 
-&gt; .green[Can also use `filter` function available under `dplyr` package to divide responses into the groups of interest]
+.bq.font90[Can also use `filter` function available under `dplyr` package to divide responses into the groups of interest]
 
 
 ```r
@@ -596,8 +580,6 @@ summary(sat.lm)$r.squared
 
 ]
 
-
-
 .out-t[Correlation = 0.9732, Regression Slope = 1.0469, R-squared = 94.7%]
 
 ---
@@ -631,49 +613,7 @@ summary(sat.lm.noIO)$r.squared
 ```
 ]
 
-.out-t[Correlation = 0.8465, Regression slope = 0.9956 , R-squared = 71.66%]
-
----
-
-class: middle
-
-# Non-linear Patterns
-
-.bql.font80[.bold[James D. Forbes 1857 experiment:] Can atmospheric pressure be determined from the boiling point of water? Is the relationship linear?]
-
-.pull-left[
-.red.center[Seems Linear!]
-&lt;img src="Day6_files/figure-html/unnamed-chunk-22-1.svg" width="80%" style="display: block; margin: auto;" /&gt;
-
-]
-
-.pull-right[
-.red.center[Curvature!]
-&lt;img src="Day6_files/figure-html/unnamed-chunk-23-1.svg" width="80%" style="display: block; margin: auto;" /&gt;
-
-]
-
----
-
-# Residuals Plot
-
-.bqt.font80[While the scatterplot of pressure vs. temp may look linear
-relationship, the residuals plot reveals that there is curvature in the
-relationship.]
-
---
-
-&lt;br&gt;
-
-.bql.font80[
-Correlation is almost 1, so why not use linear regression!!
-- Because the true nature of the relationship is not linear
-- Would systematically overestimate pressure for midrange temps and underestimate pressure for high/low temps.
-]
-
---
-
-.out-t[However, temp and log(pressure) have a linear relationship and we can apply linear model after transformation of the variables!!]
+.out-t.bold[Correlation = 0.8465, Regression slope = 0.9956 , R-squared = 71.66%]
 
 ---
 
@@ -697,7 +637,7 @@ Go over the remaining portion of in class activity and let me know if you have a
 ]
 ]
 
-<div class="countdown" id="timer_2aad5c29" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_4073e770" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
