--- a/public/stat220/Day6.html
+++ b/public/stat220/Day6.html
@@ -15,8 +15,8 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Fall 2022]
 
- September 23 2022
+ April 07 2023
 
 ---
 
@@ -56,7 +56,7 @@ class: title-slide, middle
 &lt;br&gt;
 
 .pull-left[
-.bq[
+.bqt.font90[
 - .yellow-h["data janitor work"]
 - importing data
 - cleaning data
@@ -64,14 +64,12 @@ class: title-slide, middle
 ]
 ]
 .pull-right[
-.bq[
+.bqt.font90[
 - fixing errors and poorly formatted data elements
 - transforming columns and rows
 - filtering, subsetting
 ]
 ]
-
-
 
 ---
 
@@ -86,15 +84,35 @@ class: middle
 
 # The Five Verbs
 
-Most of the operations on a data table can be achieved with
+.hljs[Most of the operations on a data table can be achieved with]
 
-.bq[
-- *select()* : extract a subset of columns
-- *filter()* : extract a subset of rows
-- *mutate()* : create new columns
-- *arrange()* : order the rows from smallest to largest (or largest to smallest)
-- *summarize()* : compute a table of summary statistics
+.bql[
+- .b[select()] : extract a subset of columns
+- .b[filter()] : extract a subset of rows
+- .b[mutate()] : create new columns
+- .b[arrange()] : order the rows from smallest to largest (or largest to smallest)
+- .b[summarize()] : compute a table of summary statistics
 ]
+
+---
+
+
+class: middle
+
+# Some Operators
+
+Operator|Definition                   
+---|---
+`&lt;`| less than                    
+`&lt;=`|	less than or equal to
+`&gt;`| greater than
+`&gt;=`|	greater than or equal to 
+`==`|	exactly equal to 
+`!=`|	not equal to 
+`x &amp; y`| `x` AND `y`                  
+`x %in% y`| test if `x` is in `y`   
+
+
 
 ---
 
@@ -124,9 +142,9 @@ babynames %&gt;%
 
 ---
 
-# Using **%&gt;%**
+# Using **%&gt;%** (pipe operator)
 
-.bq[
+.bq.font90[
 - `%&gt;%` passes .yellow-h[result on left] into .yellow-h[first argument of function on right]
 - `Chaining` functions together lets you read `Left-to-right`, `top-to-bottom`
 ]
@@ -142,29 +160,31 @@ babynames %&gt;%
 
 ---
 
-# Using **%&gt;%**
+# Using **%&gt;%** (pipe operator)
 
-.bq[
+.bq.font90[
 - `%&gt;%` passes .yellow-h[result on left] into .yellow-h[first argument of function on right]
 - `Chaining` functions together lets you read `Left-to-right`, `top-to-bottom`
 ]
+
 
 
 
 ```r
 babynames %&gt;%                   # dataframe first and then... 
-* select(year, name, n) %&gt;%     # select columns `year`, `name`, and `n`
+* select(year, name, n) %&gt;%     # select columns `year`, `name`, and `n` and then...
   head()                    
 ```
 
 ---
 
-# Using **%&gt;%**
+# Using **%&gt;%** (pipe operator)
 
-.bq[
+.bq.font90[
 - `%&gt;%` passes .yellow-h[result on left] into .yellow-h[first argument of function on right]
 - `Chaining` functions together lets you read `Left-to-right`, `top-to-bottom`
 ]
+
 
 
 
@@ -177,12 +197,13 @@ babynames %&gt;%                   # dataframe first and then...
 
 ---
 
-# Using **%&gt;%**
+# Using **%&gt;%** (pipe operator)
 
-.bq[
+.bq.font90[
 - `%&gt;%` passes .yellow-h[result on left] into .yellow-h[first argument of function on right]
 - `Chaining` functions together lets you read `Left-to-right`, `top-to-bottom`
 ]
+
 
 
 
@@ -211,6 +232,8 @@ babynames %&gt;%                   # dataframe first and then...
 # **select()** helpers
 
 .pull-left[
+
+.bql[
 `:` select range of columns
 
 ```r
@@ -233,12 +256,14 @@ select(gapminder, -c(income,population))
 select(gapminder, starts_with("p"))
 ```
 ]
-
+]
 
 --
 
 .pull-right[
+&lt;br&gt;
 
+.bql[
 `ends_with()` select columns that end with...
 
 ```r
@@ -254,7 +279,7 @@ select(gapminder, contains("e"))
 ```
 
 ]
-
+]
 
 
 ---
@@ -287,6 +312,7 @@ babynames %&gt;%
 
 # Use both *filter()* and *select()*
 
+.pull-left-40[
 
 
 ```r
@@ -295,35 +321,143 @@ bella &lt;- babynames %&gt;%
   select(year, name, sex, n)
 ```
 
+
+```r
+head(bella, 10)
+# A tibble: 10 × 4
+    year name  sex       n
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt;
+ 1  1880 Bella F        13
+ 2  1881 Bella F        24
+ 3  1882 Bella F        16
+ 4  1883 Bella F        17
+ 5  1884 Bella F        31
+ 6  1885 Bella F        25
+ 7  1886 Bella F        22
+ 8  1887 Bella F        26
+ 9  1888 Bella F        31
+10  1889 Bella F        37
+```
+
+
+
+
+]
+
+
 --
 
-.pull-left[
+
+
+
+.pull-right-60[
 
 
 ```r
-head(bella)
-# A tibble: 6 × 4
-   year name  sex       n
-  &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt; &lt;int&gt;
-1  1880 Bella F        13
-2  1881 Bella F        24
-3  1882 Bella F        16
-4  1883 Bella F        17
-5  1884 Bella F        31
-6  1885 Bella F        25
+michael_selected_years &lt;- babynames %&gt;%
+  filter(name == "Michael", sex == "M", 
+         year %in% c(1990, 2000, 2010)) %&gt;%
+  select(year, name, sex, n)
 ```
 
-]
-
-
-.pull-right[
 
 ```r
-dim(bella)
-[1] 144   4
+head(michael_selected_years, 10)
+# A tibble: 3 × 4
+   year name    sex       n
+  &lt;dbl&gt; &lt;chr&gt;   &lt;chr&gt; &lt;int&gt;
+1  1990 Michael M     65282
+2  2000 Michael M     32035
+3  2010 Michael M     17342
 ```
 
+
 ]
+
+---
+
+class: middle
+
+
+# *arrange()*
+
+.yellow-h[Order rows from smallest to largest]
+
+
+```r
+arrange(babynames, n)
+# A tibble: 1,924,665 × 5
+    year sex   name          n      prop
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;     &lt;int&gt;     &lt;dbl&gt;
+ 1  1880 F     Adelle        5 0.0000512
+ 2  1880 F     Adina         5 0.0000512
+ 3  1880 F     Adrienne      5 0.0000512
+ 4  1880 F     Albertine     5 0.0000512
+ 5  1880 F     Alys          5 0.0000512
+ 6  1880 F     Ana           5 0.0000512
+ 7  1880 F     Araminta      5 0.0000512
+ 8  1880 F     Arthur        5 0.0000512
+ 9  1880 F     Birtha        5 0.0000512
+10  1880 F     Bulah         5 0.0000512
+# … with 1,924,655 more rows
+```
+
+---
+
+class: middle
+
+
+# *desc()*
+
+Changes ordering from largest to smallest.
+
+
+
+```r
+*arrange(babynames, desc(n))
+# A tibble: 1,924,665 × 5
+    year sex   name        n   prop
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;   &lt;int&gt;  &lt;dbl&gt;
+ 1  1947 F     Linda   99686 0.0548
+ 2  1948 F     Linda   96209 0.0552
+ 3  1947 M     James   94756 0.0510
+ 4  1957 M     Michael 92695 0.0424
+ 5  1947 M     Robert  91642 0.0493
+ 6  1949 F     Linda   91016 0.0518
+ 7  1956 M     Michael 90620 0.0423
+ 8  1958 M     Michael 90520 0.0420
+ 9  1948 M     James   88588 0.0497
+10  1954 M     Michael 88514 0.0428
+# … with 1,924,655 more rows
+```
+
+---
+
+class: middle
+
+
+# Most common names in 1990
+
+
+```r
+babynames %&gt;%
+* filter(year == 1990) %&gt;%
+* arrange(desc(prop))
+# A tibble: 24,719 × 5
+    year sex   name            n   prop
+   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;       &lt;int&gt;  &lt;dbl&gt;
+ 1  1990 M     Michael     65282 0.0303
+ 2  1990 M     Christopher 52332 0.0243
+ 3  1990 F     Jessica     46475 0.0226
+ 4  1990 F     Ashley      45558 0.0222
+ 5  1990 M     Matthew     44800 0.0208
+ 6  1990 M     Joshua      43216 0.0201
+ 7  1990 F     Brittany    36538 0.0178
+ 8  1990 F     Amanda      34408 0.0168
+ 9  1990 M     Daniel      33815 0.0157
+10  1990 M     David       33742 0.0157
+# … with 24,709 more rows
+```
 
 
 ---
@@ -338,16 +472,15 @@ class: action, middle
 ]
 .pull-right-60[
 &lt;br&gt;
-&lt;br&gt;
-.bq[
-- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=39491)
+.bql.font90[
+- Let's go over to maize server/ local Rstudio and our class [moodle](https://moodle.carleton.edu/course/view.php?id=41417)
 - Get the class activity 6.Rmd file
 - Work on problems 1-3
 - Ask me questions
 ]
 ]
 
-<div class="countdown" id="timer_2b9d0558" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9cb9d702" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -356,22 +489,6 @@ class: action, middle
 ---
 
 class: middle
-
-# Some Operators
-
-Operator|Definition                   
----|---
-`&lt;`| less than                    
-`&lt;=`|	less than or equal to
-`&gt;`| greater than
-`&gt;=`|	greater than or equal to 
-`==`|	exactly equal to 
-`!=`|	not equal to 
-`x &amp; y`| `x` AND `y`                  
-`x %in% y`| test if `x` is in `y`   
-
-
----
 
 
 # *summarize()* or *summarise()*
@@ -423,6 +540,9 @@ babynames %&gt;%
 
 ---
 
+class: middle
+
+
 # Using *group_by()*
 
 
@@ -448,6 +568,7 @@ babynames %&gt;%
 
 ---
 
+class: middle
 
 # Using *group_by()* along with *summarize()*
 
@@ -474,6 +595,7 @@ babynames %&gt;%
 
 ---
 
+class: middle
 
 # *mutate()*
 
@@ -500,84 +622,7 @@ head(babynames)
 
 ---
 
-# *arrange()*
-
-.yellow-h[Order rows from smallest to largest]
-
-
-```r
-arrange(babynames, n)
-# A tibble: 1,924,665 × 6
-# Groups:   year [138]
-    year sex   name          n      prop percent
-   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;     &lt;int&gt;     &lt;dbl&gt;   &lt;dbl&gt;
- 1  1880 F     Adelle        5 0.0000512 0.00512
- 2  1880 F     Adina         5 0.0000512 0.00512
- 3  1880 F     Adrienne      5 0.0000512 0.00512
- 4  1880 F     Albertine     5 0.0000512 0.00512
- 5  1880 F     Alys          5 0.0000512 0.00512
- 6  1880 F     Ana           5 0.0000512 0.00512
- 7  1880 F     Araminta      5 0.0000512 0.00512
- 8  1880 F     Arthur        5 0.0000512 0.00512
- 9  1880 F     Birtha        5 0.0000512 0.00512
-10  1880 F     Bulah         5 0.0000512 0.00512
-# … with 1,924,655 more rows
-```
-
----
-
-# *desc()*
-
-Changes ordering from largest to smallest.
-
-
-
-```r
-*arrange(babynames, desc(n))
-# A tibble: 1,924,665 × 6
-# Groups:   year [138]
-    year sex   name        n   prop percent
-   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;   &lt;int&gt;  &lt;dbl&gt;   &lt;dbl&gt;
- 1  1947 F     Linda   99686 0.0548    5.48
- 2  1948 F     Linda   96209 0.0552    5.52
- 3  1947 M     James   94756 0.0510    5.10
- 4  1957 M     Michael 92695 0.0424    4.24
- 5  1947 M     Robert  91642 0.0493    4.93
- 6  1949 F     Linda   91016 0.0518    5.18
- 7  1956 M     Michael 90620 0.0423    4.23
- 8  1958 M     Michael 90520 0.0420    4.20
- 9  1948 M     James   88588 0.0497    4.97
-10  1954 M     Michael 88514 0.0428    4.28
-# … with 1,924,655 more rows
-```
-
----
-
-# Most common names in 1990
-
-
-```r
-babynames %&gt;%
-* filter(year == 1990) %&gt;%
-* arrange(desc(prop))
-# A tibble: 24,719 × 6
-# Groups:   year [1]
-    year sex   name            n   prop percent
-   &lt;dbl&gt; &lt;chr&gt; &lt;chr&gt;       &lt;int&gt;  &lt;dbl&gt;   &lt;dbl&gt;
- 1  1990 M     Michael     65282 0.0303    3.03
- 2  1990 M     Christopher 52332 0.0243    2.43
- 3  1990 F     Jessica     46475 0.0226    2.26
- 4  1990 F     Ashley      45558 0.0222    2.22
- 5  1990 M     Matthew     44800 0.0208    2.08
- 6  1990 M     Joshua      43216 0.0201    2.01
- 7  1990 F     Brittany    36538 0.0178    1.78
- 8  1990 F     Amanda      34408 0.0168    1.68
- 9  1990 M     Daniel      33815 0.0157    1.57
-10  1990 M     David       33742 0.0157    1.57
-# … with 24,709 more rows
-```
-
----
+class: middle
 
 # *top_n()* 
 
@@ -630,25 +675,27 @@ class: middle
 
 # Slicing and selecting data
 
-.bq[
+.bql.font90[
 The slice_ operators let you slice (subset) rows:
 
-- `slice_head(n=5)` : view the first 5 rows
+- .b[slice_head(n=5)] : view the first 5 rows
 
-- `slice_tail(n=5)` : view the last 5 rows
+- .b[slice_tail(n=5)] : view the last 5 rows
 
-- `slice_sample(n=5)` : view 5 random rows
+- .b[slice_sample(n=5)] : view 5 random rows
 
-- `slice_min(column, n=5)` : view the 5 smallest values of a column
+- .b[slice_min(column, n=5)] : view the 5 smallest values of a column
 
-- `slice_max(column, n=5)` : view the 5 largest values of a column
+- .b[slice_max(column, n=5)] : view the 5 largest values of a column
 ]
 
 ---
 
+class: middle
+
 ## *slice()*
 
-.code80[
+.code90[
 
 ```r
 library(gapminder)
@@ -664,11 +711,14 @@ slice(gapminder, 1:5)
 ```
 ]
 
---
+---
+
+class: middle
+
 
 ## *slice_max()*
 
-.code80[
+.code90[
 
 ```r
 gapminder %&gt;% slice_max(gdpPercap, n=6)
@@ -685,6 +735,8 @@ gapminder %&gt;% slice_max(gdpPercap, n=6)
 ]
 
 ---
+
+class: middle
 
 # *summarize()* vs. *mutate()*
 
@@ -706,6 +758,9 @@ gapminder %&gt;%
 ```
 
 ---
+
+class: middle
+
 
 # *summarize()* vs. *mutate()*
 
@@ -735,7 +790,10 @@ gapminder %&gt;%
 
 ---
 
-# *group_by()*
+class: middle
+
+
+# *group_by(var1, var2)*
 
 
 ```r
@@ -755,6 +813,8 @@ gapminder %&gt;%
 ```
 
 ---
+
+class: middle
 
 # *ungroup()*
 
@@ -786,17 +846,15 @@ class: action, middle
 ]
 .pull-right-60[
 &lt;br&gt;
-&lt;br&gt;
-.bq[
-- Work on problem 4
+.bql.font90[
+- Work on problems 4-6
 - Ask me questions
-- Any hw-related questions? 
 ]
 ]
 
-<div class="countdown" id="timer_65ceccce" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_763d4bea" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
