--- a/public/stat220/Day6.html
+++ b/public/stat220/Day6.html
@@ -43,7 +43,7 @@ class: title-slide, middle
 
 # .fancy[Data wrangling with **dplyr**]
 
-### .fancy[Fall 2022]
+### .fancy[Spring 2023]
 
  April 07 2023
 
@@ -480,7 +480,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_9cb9d702" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_dfe869b7" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -852,7 +852,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_763d4bea" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_d394e639" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
