--- a/public/stat120/Day8.html
+++ b/public/stat120/Day8.html
@@ -15,8 +15,8 @@
     <script>window.xaringanExtraClipboard(null, {"button":"Copy Code","success":"Copied!","error":"Press Ctrl+C to Copy"})</script>
     <link href="libs/xaringanExtra-extra-styles/xaringanExtra-extra-styles.css" rel="stylesheet" />
     <script>window.xaringanExtraClipboard(null, {"button":"<i class=\"fa fa-clipboard\"><\/i>","success":"<i class=\"fa fa-check\" style=\"color: #90BE6D\"><\/i>","error":"<i class=\"fa fa-times-circle\" style=\"color: #F94144\"><\/i>"})</script>
-    <link href="libs/font-awesome/css/all.css" rel="stylesheet" />
-    <link href="libs/font-awesome/css/v4-shims.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="libs/font-awesome/css/v4-shims.min.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
     <script src="libs/countdown/countdown.js"></script>
     <script src="https://use.fontawesome.com/5235085b15.js"></script>
@@ -52,15 +52,15 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- February 13 2023
+ April 11 2023
 
 ---
 
 class: middle
 
-# Question!
+# Let's start with a question!
 
-.bq[
+.bql.font80[
 The higher the standard error of a statistic, the `\(\ldots \ldots\)` the uncertainty surrounding the statistic.
 
   1. higher
@@ -136,7 +136,7 @@ class: middle
 ]
 
 .pull-right[
-
+&lt;br&gt;
 .bql.font90[
 - Interval estimate: `\(60\% \pm 3\% = (57\% , 63\%)\)`
 - The percentage of American adults who would vote for a Muslim for president is likely between `\(57\%\)` and `\(63\%\)`.
@@ -164,13 +164,16 @@ class: middle
 
 # Confidence Intervals
 
-.bq[
+.bql.font90[
 - A .bold[confidence interval] is an interval containing the most believable values for a parameter
 - A confidence interval is centered on the .bold[point estimate] and extends a certain number of .bold[standard errors] on either side of the estimate
 - The .bold[confidence level] tells us what percent of the intervals will contain the population parameter.
 ]
 
-.green-h[A 95% confidence interval will contain the true parameter for 95% of all samples.]
+&lt;br&gt;
+
+.bqt[
+A `\(95\%\)` confidence interval will contain the true parameter for 95% of all samples.]
 
 
 ---
@@ -195,7 +198,8 @@ class: middle
 
 # `\(95\%\)` Confidence Interval
 
-&gt; If the sampling distribution is relatively .bold[symmetric] and .bold[bell-shaped], a `\(95\%\)` confidence interval can be estimated using `$$\mathbf{statistic} \pm 2 \times \mathbf{SE}$$`
+.bql[
+If the sampling distribution is relatively .bold[symmetric] and .bold[bell-shaped], a `\(95\%\)` confidence interval can be estimated using `$$\mathbf{statistic} \pm 2 \times \mathbf{SE}$$`]
 
 
 &lt;br&gt;
@@ -243,7 +247,7 @@ class: middle
 ]
 .pull-right[
 &lt;center&gt;
-&lt;img src="images/skconfidence.png" width="70%" height="80%"&gt;&lt;br&gt;
+&lt;img src="images/skconfidence.png" width="60%" height="70%"&gt;&lt;br&gt;
 &lt;a style="font-size: smaller;"&gt;Repeated Sampling of 100 95% Confidence Intervals, Truth = Vertical Line&lt;/a&gt;&lt;/center&gt;
 
 
@@ -263,77 +267,6 @@ class: middle
 
 ---
 
-# Bootstrap 
-
-&lt;center&gt;
-&lt;a&gt; Original sample (left) to population (right)&lt;/a&gt;
-&lt;img src="images/bootinf.png" width="60%" height="60%"&gt;&lt;br&gt;
-&lt;/center&gt;
-
-.out-t[Creating a bootstrap sample is the same as using the data simulate a “population” that contains an infinite number of copies of the data.]
-
-
----
-
-# Bootstrap Sampling in R
-
-.bql[
-- resample a set of observations with replacement
-
-- same data points can appear multiple times
-]
-
-&lt;br&gt;
-
-&amp;nbsp; | Data | Statistic 
----- | ---- | ---- 
-Original sample | `\(x_1, x_2, ..., x_n\)` | `\(\bar{x}_n\)` 
-Resample  | `\(x_1^*, x_2^*, ..., x_n^*\)` | `\(\bar{x}^*_n\)`
-
-
-.pull-left-60[
-
-```r
-# R-code
-# In base R
-boot &lt;- sample(x, size, replace = TRUE)
-```
-]
-
-.pull-right-40[
-
-
-```r
-# R-code
-library(CarletonStats)
-boot(x) 
-```
-
-]
-
----
-
-
-# Bootstrap Steps
-
-.bql[
-1. Generate a bootstrap sample.
-
-2. Compute the statistic of interest for your bootstrap sample.
-
-3. Repeat steps (1) –(2) many times. Plot the distribution of all your bootstrap statistics
-
-]
-
---
-
-&lt;br&gt;
-
-.out-t.center.Large[This is the bootstrap distribution!!]
-
-
----
-
 class: middle
 
 # Bootstrap Distribution
@@ -348,46 +281,106 @@ class: middle
 
 ---
 
-class: middle
 
-# Bootstrap Distribution
+count: false
+ 
+## Bootstrap Distrubution using CarletonStats
+.panel1-bootstrap-demo-auto[
 
-.pull-left[
-
-&lt;br&gt;
-
-.bqt.font90[
-Suppose `\(X = \{20, 24, 19, 23, 22, 16\}\)`
-`\begin{align*}
-            X_1^* &amp;= \{16, 19, 16 ,23 ,22, 24\}\\
-            X_2^* &amp;= \{22, 19, 22, 19, 23, 19\}\\
-            X_3^* &amp;= \{20, 22, 24, 16, 24, 16\}\\
-            \vdots &amp; \qquad \qquad \cdots\\
-            \vdots &amp; \qquad \qquad \cdots\\
-            X_{N}^* &amp;= \{19, 24, 19, 19, 19, 22\}
-\end{align*}`
-
-
-N = total number of simulations/samples
-
+```r
+*library(CarletonStats)
+```
 ]
-]
+ 
+.panel2-bootstrap-demo-auto[
 
-.pull-right[
-![A bootstrap distribution](images/boot.png)
 ]
 
 ---
+count: false
+ 
+## Bootstrap Distrubution using CarletonStats
+.panel1-bootstrap-demo-auto[
 
-## Summary
-
-.bql.font90[
-- .bold[Interval estimates] let us infer a set of plausible values for a parameter
-- A 95% .bold[confidence interval] will contain the true parameter for 95% of all samples
-- Usually, we do not have access to the population and cannot do .bold[repeated sampling]
-- To get an estimate of standard error, can generate .bold[bootstrap samples] by sampling with replacement form the original sample, using the same sample size
-- Can use the bootstrap standard error to construct .bold[bootstrap confidence intervals]
+```r
+library(CarletonStats)
+*X &lt;- c(20,24,19,23,22,16)
+```
 ]
+ 
+.panel2-bootstrap-demo-auto[
+
+]
+
+---
+count: false
+ 
+## Bootstrap Distrubution using CarletonStats
+.panel1-bootstrap-demo-auto[
+
+```r
+library(CarletonStats)
+X &lt;- c(20,24,19,23,22,16)
+*boot(X)
+```
+]
+ 
+.panel2-bootstrap-demo-auto[
+
+```
+
+	** Bootstrap interval for statistic
+
+ Observed  X : 20.66667 
+ Mean of bootstrap distribution: 20.6599 
+ Standard error of bootstrap distribution: 1.096 
+
+ Bootstrap percentile interval
+    2.5%    97.5% 
+18.33333 22.66667 
+
+		*--------------*
+```
+
+&lt;img src="Day8_files/figure-html/bootstrap-demo_auto_03_output-1.svg" width="100%" /&gt;
+]
+
+&lt;style&gt;
+.panel1-bootstrap-demo-auto {
+  color: black;
+  width: 39.2%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 80%
+}
+.panel2-bootstrap-demo-auto {
+  color: black;
+  width: 58.8%;
+  hight: 32%;
+  float: left;
+  padding-left: 1%;
+  font-size: 80%
+}
+.panel3-bootstrap-demo-auto {
+  color: black;
+  width: NA%;
+  hight: 33%;
+  float: left;
+  padding-left: 1%;
+  font-size: 80%
+}
+&lt;/style&gt;
+
+
+
+.font50[
+
+]
+
+
+
+
 
 ---
 
@@ -409,9 +402,9 @@ Go over the remaining portion of in class activity and let me know if you have a
 ]
 ]
 
-<div class="countdown" id="timer_76921c25" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_5305807c" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 
