--- a/static/stat120/Day7.html
+++ b/static/stat120/Day7.html
@@ -52,7 +52,7 @@ background-size: 160px, 100% 100%
 
 ### .fancy[Stat 120]
 
- April 09 2023
+ April 10 2023
 
 ---
 
@@ -1153,7 +1153,7 @@ Please go through the remainder of the class activity file and try to answer the
 ]
 ]
 
-<div class="countdown" id="timer_9ea84f0a" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_bb4966f9" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
